# ProducerConsumer

./: CMakeLists.txt  main.cpp
commons/: CMakeLists.txt  cond_var.cpp  consumer_routine.cpp  consumer_routine.h  events_consumer.h  events_producer.h  events_producer_consumer.h  iexchange_data.cpp  iexchange_data.h  iroutine.cpp  iroutine.h  ithread.cpp  ithread.h  log_msg.h  producer.h  pthread_join_timeout.cpp  pthread_join_timeout.h  safe_queue.h  safe_state.cpp  safe_state.h  waiting_time_getter.cpp  waiting_time_getter.h
commons/exchange_data/: CMakeLists.txt
commons/logger/: CMakeLists.txt  log_msg.cpp
commons/producer_consumer/: CMakeLists.txt  consumer_routine.cpp  consumer_routine.h
commons/test_helper/: CMakeLists.txt  test_path.cpp  test_path.h
commons/thread/: CMakeLists.txt  cond_var.cpp  cond_var.h  iroutine.cpp  iroutine.h  isignal_handler.cpp  isignal_handler.h  ithread.cpp  ithread.h  thread_defs.cpp  thread_defs.h  thread_join_timeout.cpp  thread_join_timeout.h  thread_joining_data.cpp  thread_joining_data.h
commons/thread/test/: CMakeLists.txt  ithread_test.cpp  ithread_try_stop_routine_through_kill_test.cpp  routine_fixture.h  stop_routine_through_cancel_fixture.h  stop_routine_through_flag_fixture.h  stop_routine_through_signal_fixture.h
commons/thread_safe/: CMakeLists.txt  safe_queue.h  safe_state.cpp  safe_state.h
commons/time_helper/: CMakeLists.txt  waiting_time_getter.cpp  waiting_time_getter.h
protocols/autots/: CMakeLists.txt  autots_consumer.cpp  autots_consumer.h  autots_routine.cpp  autots_routine.h
tests/: CMakeLists.txt  main_test.cpp  test_path.cpp  test_path.h
